# FEM1D_classes

./: CMakeLists.txt
src/: Element.cu  Element.cuh  GaussPoint.cu  GaussPoint.cuh  MasterElement.cu  MasterElement.cuh  Node.cu  Node.cuh  testDrive.cu
